Default empty doesn't ignore value > 0 check anymore, fixed bug where animals would get reset to 0 if the same oasis was handlerd several times

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <a href="https://www.youtube.com/watch?v=BUdyHsmOQfc&ab_channel=JohnSmith"
   >How to use</a
 >
+<a href="https://www.youtube.com/watch?v=as54bCmBd9c">How to setup v2+use</a>
 <div>If you find a bug you can contact me on discord (mrciguma)</div>
 
 <div>
